[po-130] Added css to prevent export to csv text from wrapping

--- a/orga/app/styles/components/campaign-item.scss
+++ b/orga/app/styles/components/campaign-item.scss
@@ -41,4 +41,5 @@
   padding: 0 30px;
   font-size: 0.75rem;
   text-decoration: none;
+  white-space: nowrap;
 }
